# wenjx

./: .gitignore  Pipfile  README.md  app.py  fixed_requirements.txt  pyproject.toml  test.md  wenjx.py
api/: routes.py
models/: schemas.py
services/: wenjx_service.py
templates/: index.py
